--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -27,6 +27,16 @@
             android:textSize="16sp"
             android:layout_marginBottom="16dp" />
 
+        <TextView
+            android:id="@+id/serverUrlTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            android:textColor="@android:color/darker_gray"
+            android:text="Server: Not configured" />
+
         <Button
             android:id="@+id/detectButton"
             android:layout_width="match_parent"
